<resources>
    <string name="app_name">LTA Mobility Sensing</string>

    <!--TextView Labels-->
    <string name="text_other_transport_label">Mode of transport</string>
    <string name="text_Username">Username</string>
    <string name="text_MobileUUID">MobileUUID</string>
    <string name="text_MobileUUID_disclaimer">Not modifiable</string>

    <string name="action_config">Config</string>

    <!--Button Labels-->
    <string name="btn_train_label">Train</string>
    <string name="btn_bus_label">Bus</string>
    <string name="btn_car_label">Car</string>
    <string name="btn_walking_label">Walking</string>
    <string name="btn_idle_label">Idle</string>

    <string name="btn_save">Save</string>
</resources>
